Fixed alignment of carousels

--- a/src/static/css/CarouselCelebrities.css
+++ b/src/static/css/CarouselCelebrities.css
@@ -22,7 +22,7 @@
 }
 
 #MostPopularCelebritiesCont{
-    margin: 50px auto;
+    /* margin: 50px auto; */
     padding: 20px;
     max-width: 1160px; 
     position: relative;
