--- a/src/static/css/ComingSoonSlider.css
+++ b/src/static/css/ComingSoonSlider.css
@@ -1,9 +1,9 @@
 .comingSoonSlider {
     width: 1000px;
     height: 540px;
-    position: absolute;
+    /* position: absolute;
     top: 95px;
-    left: 465px;
+    left: 465px; */
 }
 
 .comingSoonText {
