--- a/src/static/css/Main.css
+++ b/src/static/css/Main.css
@@ -9,4 +9,9 @@ body {
 .Maindiv{
     /* width: 100vw; */
     height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
+    gap: 30px;
 }
