--- a/src/static/css/NowInTheatersCarousel.css
+++ b/src/static/css/NowInTheatersCarousel.css
@@ -1,8 +1,8 @@
 .NowInTheatersMainContainer { 
     width: 1000px; 
-    position: relative;
+    /* position: relative;
     left: 465px;
-    top: 675px;
+    top: 675px; */
 }
 
 .NowInTheatersContainer {
