--- a/src/static/css/RecentNews.css
+++ b/src/static/css/RecentNews.css
@@ -1,6 +1,6 @@
 .recent-news {
-    max-width: 1200px;
-    margin: 50px auto;
+    width: 1200px;
+    /* margin: 50px auto; */
     padding: 20px;
 }
 
